--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,14 +1,361 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Content Manager</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  </body>
+    <style>
+        @media (max-width: 799px) {
+            aside.css-1gj57a0-SidebarContainer-card.el9l68m0 {
+                position: static;
+                width: 100%;
+                margin-bottom: 30px;
+            }
+
+            .css-v758ki-AppMainContainer,
+            .css-12b66la-AppHeaderContent {
+                min-width: 0;
+            }
+
+            .css-104dqk8-AppHeaderButton-button-buttonActive-buttonActive-buttonActive-buttonActive-AppHeaderButton,
+            .css-12yqrwa-AppHeaderNavLink-AppHeaderButton-button-buttonActive-buttonActive-buttonActive-buttonActive-AppHeaderButton {
+                margin: 0;
+                padding: 16px 7px;
+            }
+
+            .css-1f7nhiq-CollectionMain {
+                padding-left: 0;
+            }
+
+            .css-1hvrgvd-CollectionTopContainer-card-cardTop {
+                width: 100%;
+            }
+
+            .css-1gtfcgu-ToolbarContainer {
+                width: 100%;
+                max-width: 100%;
+                gap: 0.5rem;
+                height: auto;
+                padding: .5rem .2rem;
+            }
+
+            .css-1uf4969-ToolbarSectionMeta-toolbarSection-toolbarSection {
+                display: none;
+            }
+
+            .css-16b5p1f-ToolbarSectionMain-toolbarSection {
+                flex-direction: column;
+                justify-content: space-evenly;
+            }
+
+            .css-16b5p1f-ToolbarSectionMain-toolbarSection>div {
+                flex-wrap: wrap;
+                gap: 0.5rem 0;
+            }
+
+            /* Media */
+            .css-1f3mf5k-StyledModal {
+                padding: 15px;
+                grid-template-rows: 190px auto;
+            }
+
+            .css-svjxk-SearchContainer {
+                display: block;
+                width: 100%;
+            }
+
+            .css-smzvtl-LibraryTop {
+                flex-direction: column;
+            }
+
+            .css-3ifd9s-ActionsContainer {
+                text-align: center;
+            }
+
+            .css-1ih1y1j-LibraryTitle {
+                margin-bottom: 15px;
+            }
+
+            .css-2ptjc9-UpperActionsContainer {
+                display: inline-block;
+            }
+
+            .css-1qukh7n-DownloadButton-button-default-disabled-button {
+                margin-left: 0;
+                margin-right: 0;
+            }
+
+            .css-13rmovq-StyledUploadButton-button-default-disabled-button-gray {
+                margin-left: 10px;
+            }
+
+            .css-1hpjyse-DeleteButton-button-default-disabled-button-lightRed {
+                margin-top: 10px;
+                margin-left: 0;
+                margin-right: 0;
+            }
+
+            .css-1s67tkf-InsertButton-button-default-disabled-button-green {
+                margin-top: 10px;
+                margin-left: 10px;
+            }
+
+            .css-16796rj-LowerActionsContainer {
+                display: inline-block;
+                margin-top: 0;
+            }
+
+            .css-stmjdx-CardGridContainer {
+                position: static;
+                overflow: visible;
+                width: 300px;
+                padding-top: 20px;
+            }
+
+            /* End Media */
+
+            /* Blog */
+            .css-hn3jn7-EditorContainer {
+                min-width: 0;
+                padding-top: 100px;
+            }
+
+            .css-2oej7z-ToolbarContainer {
+                height: 100px;
+                width: 100%;
+                min-width: 0;
+            }
+
+            .css-osnbqe-ToolbarToggle {
+                flex-direction: column;
+            }
+
+            /* End Blog */
+
+            /* Optional */
+            span.Resizer.vertical {
+                display: none;
+            }
+
+            .Pane.vertical.Pane2 {
+                display: none;
+            }
+
+            .Pane.vertical.Pane1 {
+                width: 100% !important;
+            }
+
+            .css-1bqupl5-ViewControls.e1pxf6c47 {
+                display: none;
+            }
+
+            .SplitPane.css-7d7n9g-StyledSplitPane-card-splitPane.e1pxf6c41.vertical {
+                display: block !important;
+            }
+
+            .css-134r1tn-RowContainer.ebn7k121 {
+                display: block;
+            }
+
+            button.css-6ekon-ActionButton-button-default-disabled-button.eljtsap3 {
+                margin: 0 10px 0 0;
+                font-size: 12px;
+                padding: 0 10px;
+            }
+
+            .css-1o58c3b-ButtonsContainer.ebn7k122 {
+                display: flex;
+                gap: 0.5rem;
+            }
+
+            .css-1o58c3b-ButtonsContainer.ebn7k122>* {
+                margin: 0px;
+            }
+
+            .css-134r1tn-RowContainer.ebn7k121 {
+                margin-top: 10px;
+            }
+
+            button.css-196hm3u-DeleteButton-button-default-disabled-button-lightRed.eljtsap1 {
+                margin: 0 10px 0 0;
+            }
+
+            button.css-d08ild-InsertButton-button-default-disabled-button-green.eljtsap2 {
+                margin-left: 0;
+            }
+
+            .css-1o58c3b-ButtonsContainer.ebn7k122 {
+                margin-top: 10px;
+            }
+
+            button.css-579ih7-ActionButton-button-default-disabled-button-gray-ActionButton.eljtsap3 {
+                margin: 0 10px 0 0;
+                font-size: 12px;
+                padding: 0 10px;
+            }
+
+            label.nc-fileUploadButton.css-1fb6kv1-UploadButton-button-default-disabled-button-gray.eljtsap0 {
+                margin-left: 0;
+            }
+
+            .css-1vfl1js {
+                padding-inline: 5px;
+            }
+              /**
+Adapted From Source: https://gist.github.com/searls/7fd2c3223571a58a81006e7da66bd064
+*/
+
+@media (max-width: 799px) {
+    /* Bring Any Dropdown To Center Of Page */
+
+    [class*=DropdownList]{
+      position: fixed !important;
+      min-width: 20% !important;
+      width: 90% !important;
+      margin: auto !important;
+      height: fit-content !important;
+      top: auto !important;
+      left: 0 !important;
+      right: 0 !important;
+      bottom: 10px !important;
+      background: #e6f4fd !important;
+      border: 2px solid #3a69c7 !important;
+  }
+
+  /* Add Overflow To Modal Window */
+    [class*=StyledModal]{
+        width: 90dvw !important;
+        width: 90% !important;
+    }
+  
+  
+
+    [class*=LibraryTitle]{
+    display: none !important;
+    }
+
+    [class*=CollectionTopNewButton]{
+      padding: 0px 10px !important;
+      height: auto !important;
+    }
+
+    [class*=LibraryTop]{
+      overflow-x: auto !important;
+      height: fit-content !important;
+      padding-bottom: 10px !important;
+    }
+
+
+    /* Hide Blog Post Title From Navbar */ 
+    [class*=BackCollection]{
+        display: none !important;
+    }
+
+    /* Add Padding To Control Pane */ 
+    [class*=ControlPaneContainer] {
+      padding: 0px 10px !important;
+    }
+
+    /* Rest As Per: Searl's Code*/
+
+    [class*=BackCollection],
+    [class*=BackStatus] {
+      font-size: .6rem !important;
+    }
+  
+    [class*=AppHeaderContent],
+    [class*=AppMainContainer] {
+      margin-right: 0 !important;
+      margin-left: 0 !important;
+      min-width: calc(100vw - 24px) !important;
+      max-width: 100vw !important;
+    }
+  
+    [class*=AppHeaderContent] {
+      display: flex !important;
+      justify-content: space-between !important;
+    }
+  
+    [class*=AppHeaderQuickNewButton] {
+      width: 100% !important;
+    }
+  
+    [class*=AppHeaderButton] {
+      padding-left: 4px !important;
+      padding-right: 4px !important;
+    }
+  
+    [class*=EditorContainer],
+    [class*=ToolbarContainer] {
+      min-width: initial !important;
+      overflow-x: auto !important;
+    }
+  
+    [class*=ToolbarSubSectionFirst] {
+      display: flex !important;
+      flex-direction: column !important;
+    }
+  
+    [class*=PublishedToolbarButton] {
+      padding: 0 8px !important;
+    }
+  
+    [class*=PublishedToolbarButton]::after {
+      display: none !important;
+    }
+
+    [class*=ToolbarSubSectionFirst] {
+      flex-direction: row !important;
+    }
+  
+    [class*=SearchInput] {
+      margin-top: 5px !important;
+    }
+  
+    [class*=ViewControls] {
+      position: initial !important;
+    }
+  
+    [class*=PreviewPaneContainer-ControlPaneContainer] {
+      padding: 0 !important;
+    }
+  
+    [class*=ControlPaneContainer] {
+      max-width: 100vw !important;
+    }
+  
+  
+    [class*=EditorControlBar] [class*=ToolbarContainer] {
+      display: flex !important;
+      flex-direction: column !important;
+    }
+  
+    [class*=CollectionContainer] {
+      display: flex !important;
+      flex-direction: column !important;
+    }
+  
+    [class*=SidebarContainer] {
+      position: initial !important;
+      width: initial !important;
+    }
+  
+    [class*=CollectionMain] {
+      padding-left: 0 !important;
+      margin-top: 20px !important;
+    }
+  
+  }
+        }
+    </style>
+</body>
+
 </html>
