--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -45,6 +45,7 @@
                 gap: 0.5rem;
                 height: auto;
                 padding: .5rem .2rem;
+                flex-wrap: wrap;
             }
 
             .css-1uf4969-ToolbarSectionMeta-toolbarSection-toolbarSection {
@@ -351,6 +352,9 @@ Adapted From Source: https://gist.github.com/searls/7fd2c3223571a58a81006e7da66b
     [class*=CollectionMain] {
       padding-left: 0 !important;
       margin-top: 20px !important;
+    }
+    [class*="StyledModal"] {
+      min-width: 340px;
     }
   
   }
